--- a/trasacciones/templates/trasacciones.html
+++ b/trasacciones/templates/trasacciones.html
@@ -29,7 +29,7 @@
               <tr>
                 <td>{{ transaction.0 }}</td>
                 <td>{{ transaction.1 }}</td>
-                <td>{{ transaction.2 }}</td>
+                <td>-{{ transaction.2 }}</td>
                 <td>{{ transaction.3 }}</td>
                 <td>{{ transaction.4 }}</td>
                 <td>
