--- a/payments/templates/payments.html
+++ b/payments/templates/payments.html
@@ -51,7 +51,7 @@
         <tr>
           <td>{{ transaction.0 }}</td>
           <td>{{ transaction.1 }}</td>
-          <td>{{ transaction.2 }}</td>
+          <td>-{{ transaction.2 }}</td>
           <td>{{ transaction.3 }}</td>
           <td>{{ transaction.4 }}</td>
         </tr>
