--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/transacciones.css' %}" />
     <link rel="stylesheet" href="{% static 'css/main.css' %}" />
     <link rel="stylesheet" href="{% static 'css/add_account.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/edit_account.css' %}" />
   </head>
   <body>
     {% block content %}
