--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Presupuesto</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/edit_transaction.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/transacciones.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/login.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/view_expenses.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/edit_expenses.css' %}" />
+    {% comment %} <link rel="stylesheet" href="{% static 'css/transacciones.css' %}" /> {% endcomment %}
     <link rel="stylesheet" href="{% static 'css/main.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/add_account.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/edit_account.css' %}" />
+    {% comment %} <link rel="stylesheet" href="{% static 'css/add_account.css' %}" /> {% endcomment %}
+    {% comment %} <link rel="stylesheet" href="{% static 'css/edit_account.css' %}" /> {% endcomment %}
   </head>
   <body>
     {% block content %}
