--- a/main/static/css/main.css
+++ b/main/static/css/main.css
@@ -1,29 +1,278 @@
-/* Estilos para el contenido */
-.content {
-    max-width: 800px;
-    margin: 40px auto;
-    padding: 20px;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+.nav {
+    filter: drop-shadow(0.25rem 0.25rem 0.5rem #0005);
+    width: 100%;
+    max-width: 14rem;
 }
 
-/* Estilos para los enlaces */
-.link {
+.filter {
+    filter: drop-shadow(0.25rem 0.25rem 0.5rem #ffffff00);
+}
+
+@keyframes firstShow {
+
+    0%,
+    100% {
+        transform: perspective(1000px) translate3d(0, 0, 0em);
+    }
+
+    50% {
+        transform: perspective(1000px) translate3d(0, 0, 3em);
+    }
+}
+
+@keyframes show {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.ul {
+    position: relative;
+    aperspective: 1000px;
+    list-style: none;
+    padding-left: 0;
+    box-sizing: border-box;
+    border-radius: 1rem;
+    transform-style: preserve-3d;
+    perspective: 1000px;
+    font:
+        lighter 1rem Helvetica,
+        sans-serif;
+
+    li {
+        height: 3rem;
+        display: flex;
+        background: linear-gradient(#00000005, #0000), #fff;
+        aborder-bottom: 1px solid #0001;
+        abackground-clip: padding-box;
+        box-shadow: inset 0 0 1rem -0.5rem #0002;
+        transition: transform 0.35s, box-shadow 0.35s, background 0.35s;
+        transform: translate3d(0, 0, 0);
+        opacity: 0;
+        animation:
+            firstShow 0.5s ease-in-out,
+            show 0.15s linear forwards;
+
+        &:nth-child(1) {
+            animation-delay: 0.50s;
+        }
+
+        &:nth-child(2) {
+            animation-delay: 0.60s;
+        }
+
+        &:nth-child(3) {
+            animation-delay: 0.70s;
+        }
+
+        &:nth-child(4) {
+            animation-delay: 0.80s;
+        }
+
+        &:nth-child(5) {
+            animation-delay: 0.90s;
+        }
+
+        &:nth-child(6) {
+            animation-delay: 1.00s;
+        }
+
+        &:nth-child(7) {
+            animation-delay: 1.10s;
+        }
+
+        &:nth-child(8) {
+            animation-delay: 1.20s;
+        }
+
+        &:nth-child(9) {
+            animation-delay: 1.30s;
+        }
+
+        &:first-child {
+            border-radius: 1rem 1rem 0 0;
+        }
+
+        &:last-child {
+            border-radius: 0 0 1rem 1rem;
+        }
+
+        &:hover,
+        &:focus-within {
+            transform: translate3d(0, 0, 3rem);
+        }
+
+        &:hover+&,
+        &:has(+ &:focus-within),
+        &:focus+&,
+        &:has(+ &:focus-within) {
+            box-shadow: inset 0 1rem 1rem -1rem #0003;
+            transform: translate3d(0, 0, 2rem);
+        }
+
+        &:has(+ &:hover),
+        &:has(+ &:focus-within) {
+            box-shadow: inset 0 -1rem 1rem -1rem #0003;
+        }
+
+        &:hover+&+&,
+        &:focus-within+&+& {
+            box-shadow: inset 0 1rem 0.5rem -0.75rem #0002;
+        }
+
+        &:has(+ & + &:hover),
+        &:has(+ & + &:focus-within) {
+            box-shadow: inset 0 -1rem 0.5rem -0.75rem #0002;
+        }
+    }
+
+    .h2,
+    .a {
+        font-size: 0.9rem;
+        display: flex;
+        align-items: center;
+        flex: 1;
+        padding: 0 1rem;
+        text-decoration: none;
+        color: #000;
+    }
+
+    .h2 {
+        font-size: 1rem;
+        font-weight: 400;
+    }
+
+    .i {
+        margin-right: 0.25em;
+        width: 1rem;
+    }
+}
+
+@media (prefers-reduced-motion) {
+    .nav * {
+        transition-duration: 0s !important;
+        animation-duration: 0s !important;
+    }
+}
+
+
+
+
+
+
+/* From Uiverse.io by G4b413l */
+.group {
+    position: relative;
+}
+
+.input1 {
+    font-size: 16px;
+    padding: 10px 10px 10px 5px;
     display: block;
-    margin-bottom: 10px;
-    padding: 10px;
-    border-bottom: 1px solid #ccc;
-    text-decoration: none;
-    color: #337ab7;
+    width: 200px;
+    border: none;
+    border-bottom: 1px solid #515151;
+    background: transparent;
 }
 
-.link:hover {
-    background-color: #f5f5f5;
-    color: #23527c;
+.input1:focus {
+    outline: none;
 }
 
-.link.active {
-    background-color: #337ab7;
+.label1 {
+    color: #999;
+    font-size: 18px;
+    font-weight: normal;
+    position: absolute;
+    pointer-events: none;
+    left: 5px;
+    top: 10px;
+    transition: 0.2s ease all;
+    -moz-transition: 0.2s ease all;
+    -webkit-transition: 0.2s ease all;
+}
+
+.input1:focus~label,
+.input1:valid~label {
+    top: -20px;
+    font-size: 14px;
+    color: #5264AE;
+}
+
+.bar {
+    position: relative;
+    display: block;
+    width: 200px;
+}
+
+.bar:before,
+.bar:after {
+    content: '';
+    height: 2px;
+    width: 0;
+    bottom: 1px;
+    position: absolute;
+    background: #5264AE;
+    transition: 0.2s ease all;
+    -moz-transition: 0.2s ease all;
+    -webkit-transition: 0.2s ease all;
+}
+
+.bar:before {
+    left: 50%;
+}
+
+.bar:after {
+    right: 50%;
+}
+
+.input1:focus~.bar:before,
+.input1:focus~.bar:after {
+    width: 50%;
+}
+
+.highlight {
+    position: absolute;
+    height: 60%;
+    width: 100px;
+    top: 25%;
+    left: 0;
+    pointer-events: none;
+    opacity: 0.5;
+}
+
+.input1:focus~.highlight {
+    animation: inputHighlighter 0.3s ease;
+}
+
+@keyframes inputHighlighter {
+    from {
+        background: #5264AE;
+    }
+
+    to {
+        width: 0;
+        background: transparent;
+    }
+}
+
+
+.btn-guardar {
+    background-color: #4CAF50;
     color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    display: block;
+    margin: 0 auto;
+}
+
+.btn-guardar:hover {
+    background-color: #3e8e41;
+    /* Color de fondo al pasar el mouse */
 }
