--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -3,16 +3,19 @@
 {% block content %}
   <h1>BIENVENID@ {{ user }}</h1>
   <form method="post">
+    {% csrf_token %}
     <div class="group">
-      <input required type="text" class="input1" />
+      <input class="input1" name="income" type="number" step="0.01" required />
       <span class="highlight"></span>
       <span class="bar"></span>
-      <label class="label1">Ingreso</label>
+      <label class="label1">Ingresos</label>
     </div>
     <div>
       <label for="account">Elige que cuenta deseas agregar el ingreso</label>
-      <select name="account" id="account">
-        <option value="1"></option>
+      <select name="account" id="account" required>
+        {% for account in accounts %}
+          <option value="{{ account.0 }}">{{ account.1 }}</option>
+        {% endfor %}
       </select>
     </div>
     <button class="btn-guardar" type="submit">Guardar ingreso</button>
